fixed scrollbars to browser default

--- a/static/app.css
+++ b/static/app.css
@@ -205,7 +205,7 @@ html {
 }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1023px) {
 .hiddenMobile{
 display:none;
 }    
@@ -230,11 +230,3 @@ display:none;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
-.container {
-    width: inherit;
-}
-
-._mCS_1 .mCSB_dragger .mCSB_dragger_bar{ background-color: #78ACB9 !important; opacity:0.5;}
-
-._mCS_2 .mCSB_dragger .mCSB_dragger_bar{ background-color: #78ACB9 !important; opacity:0.5;}
